	* Fixed the constraint of only one UI being activated at a time not actually existing 
	* Fixed a crash when debug graphs were used
	* Fixed incorrect path being used if the font engine failed to load

REMOVALS:
	* Removed the m_filter cvar - it did nothing
	* Removed the "Gamedir" cvar due to aforementioned asset changes

OTHER CHANGES:
	* Gave the tangfuslicator particles a bit of colour
	* Renamed some cvars:
		* zombietime -> sv_zombietime
		* showclamp -> sv_showclamp
	* Engine sign-on message now matches "Euphoria Retro Game Engine" external branding
	* Changed quit image
	* Renamed mouse_input cvar to input_mouse_enabled
	* Renamed scr_debuggraph to scr_netgraph -- more clearly delineates its purpose
	* Renamed basically every single source file
	* Renamed gl_width and gl_height CVars to r_width and r_height due to being renderer independent
	* Renamed cd_ cvars to s_ because they don't relate to CDs anymore

Version 0.0.10 (Build 558)
June 8, 2024
* Fixed numerous horrific crimes against C programming that caused crash bugs

Version 0.0.10 (Build 553)
June 8, 2024

NEW FEATURES:
* Added the Tangfuslicator!
	* A director team gun that can zombify Players. However, the range is short (currently 1,536 units) and you can't directly see where it's going (it spews particles).
* Major particle system improvements:
	* Added velocity to generic particle effect
	* Added the func_particle_effect entity
		* You can use this to send any tempent over the network.
		* The main keys to use with this entity are velocity (speed of the particles), particle_effect (type of the particle effect), rate (particles per tick) and for some of them color.
		* There are two ways to control lifetime: alphavel (will fade by this much) and lifetime (will disappear after this many milliseconds)
		* Most of the others are intended for specific particle effects and haven't really been tested! 