@@ -601,8 +601,6 @@ char* bindnames[][2] =
 {"invdrop",			"^5Drop Item"},
 {"invprev",			"^5Prev Item"},
 {"invnext",			"^5Next Item"},
-
-{"cmd help", 		"^5Help Computer" },
 { 0, 0 }
 };
 
@@ -2387,21 +2385,23 @@ static char gameoptions_statusbar[128];
 
 static menuframework_t s_gameoptions_menu;
 
-static menulist_t	s_friendlyfire_box;
-static menulist_t	s_friendlyfire_item_box;
-static menulist_t	s_falls_box;
-static menulist_t	s_weapons_stay_box;
-static menulist_t	s_instant_powerups_box;
-static menulist_t	s_powerups_box;
-static menulist_t	s_health_box;
-static menulist_t	s_spawn_farthest_box;
-static menulist_t	s_samelevel_box;
-static menulist_t	s_force_respawn_box;
-static menulist_t	s_armor_box;
-static menulist_t	s_allow_exit_box;
-static menulist_t	s_infinite_Ammo_box;
-static menulist_t	s_quad_drop_box;
-static menulist_t	s_individual_fraglimit_box;
+static menulist_t s_friendlyfire_box;
+static menulist_t s_friendlyfire_item_box;
+static menulist_t s_falls_box;
+static menulist_t s_weapons_stay_box;
+static menulist_t s_instant_powerups_box;
+static menulist_t s_powerups_box;
+static menulist_t s_health_box;
+static menulist_t s_spawn_farthest_box;
+static menulist_t s_samelevel_box;
+static menulist_t s_force_respawn_box;
+static menulist_t s_armor_box;
+static menulist_t s_allow_exit_box;
+static menulist_t s_infinite_ammo_box;
+static menulist_t s_quad_drop_box;
+static menulist_t s_individual_fraglimit_box;
+static menulist_t s_director_can_pickup_player_items_box;
+static menulist_t s_drop_director_items_box;
 
 static void GameFlagCallback(void* self)
 {
@@ -2475,7 +2475,7 @@ static void GameFlagCallback(void* self)
 			flags |= GF_NO_ARMOR;
 		goto setvalue;
 	}
-	else if (f == &s_infinite_Ammo_box)
+	else if (f == &s_infinite_ammo_box)
 	{
 		bit = GF_INFINITE_AMMO;
 	}
@@ -2501,6 +2501,23 @@ static void GameFlagCallback(void* self)
 			flags &= ~GF_INDIVIDUAL_FRAGLIMIT;
 		goto setvalue;
 	}
+	else if (f == &s_director_can_pickup_player_items_box)
+	{
+		if (f->curvalue)
+			flags |= GF_DIRECTOR_CAN_PICKUP_PLAYER_ITEMS;
+		else
+			flags &= ~GF_DIRECTOR_CAN_PICKUP_PLAYER_ITEMS;
+		goto setvalue;
+	}
+	else if (f == &s_drop_director_items_box)
+	{
+		if (f->curvalue)
+			flags |= GF_DROP_DIRECTOR_ITEMS;
+		else
+			flags &= ~GF_DROP_DIRECTOR_ITEMS;
+		goto setvalue;
+	}
+
 
 	if (f)
 	{
@@ -2610,13 +2627,13 @@ void GameOptions_MenuInit(void)
 	s_allow_exit_box.itemnames = yes_no_names;
 	s_allow_exit_box.curvalue = (gameflags & GF_ALLOW_EXIT) != 0;
 
-	s_infinite_Ammo_box.generic.type = MTYPE_SPINCONTROL;
-	s_infinite_Ammo_box.generic.x = 0;
-	s_infinite_Ammo_box.generic.y = y += 10 * vid_hudscale->value;
-	s_infinite_Ammo_box.generic.name = "^5Infinite Ammo";
-	s_infinite_Ammo_box.generic.callback = GameFlagCallback;
-	s_infinite_Ammo_box.itemnames = yes_no_names;
-	s_infinite_Ammo_box.curvalue = (gameflags & GF_INFINITE_AMMO) != 0;
+	s_infinite_ammo_box.generic.type = MTYPE_SPINCONTROL;
+	s_infinite_ammo_box.generic.x = 0;
+	s_infinite_ammo_box.generic.y = y += 10 * vid_hudscale->value;
+	s_infinite_ammo_box.generic.name = "^5Infinite Ammo";
+	s_infinite_ammo_box.generic.callback = GameFlagCallback;
+	s_infinite_ammo_box.itemnames = yes_no_names;
+	s_infinite_ammo_box.curvalue = (gameflags & GF_INFINITE_AMMO) != 0;
 
 	s_quad_drop_box.generic.type = MTYPE_SPINCONTROL;
 	s_quad_drop_box.generic.x = 0;
@@ -2650,6 +2667,22 @@ void GameOptions_MenuInit(void)
 	s_individual_fraglimit_box.itemnames = yes_no_names;
 	s_individual_fraglimit_box.curvalue = (gameflags & GF_INDIVIDUAL_FRAGLIMIT) != 0;
 
+	s_director_can_pickup_player_items_box.generic.type = MTYPE_SPINCONTROL;
+	s_director_can_pickup_player_items_box.generic.x = 0;
+	s_director_can_pickup_player_items_box.generic.y = y += 10 * vid_hudscale->value;
+	s_director_can_pickup_player_items_box.generic.name = "^5Directors Can Pick Up Player Items";
+	s_director_can_pickup_player_items_box.generic.callback = GameFlagCallback;
+	s_director_can_pickup_player_items_box.itemnames = yes_no_names;
+	s_director_can_pickup_player_items_box.curvalue = (gameflags & GF_DIRECTOR_CAN_PICKUP_PLAYER_ITEMS) != 0;
+
+	s_drop_director_items_box.generic.type = MTYPE_SPINCONTROL;
+	s_drop_director_items_box.generic.x = 0;
+	s_drop_director_items_box.generic.y = y += 10 * vid_hudscale->value;
+	s_drop_director_items_box.generic.name = "^5Directors Drop Items";
+	s_drop_director_items_box.generic.callback = GameFlagCallback;
+	s_drop_director_items_box.itemnames = yes_no_names;
+	s_drop_director_items_box.curvalue = (gameflags & GF_DROP_DIRECTOR_ITEMS) != 0;
+
 	Menu_AddItem(&s_gameoptions_menu, &s_falls_box);
 	Menu_AddItem(&s_gameoptions_menu, &s_weapons_stay_box);
 	Menu_AddItem(&s_gameoptions_menu, &s_instant_powerups_box);
@@ -2660,11 +2693,13 @@ void GameOptions_MenuInit(void)
 	Menu_AddItem(&s_gameoptions_menu, &s_samelevel_box);
 	Menu_AddItem(&s_gameoptions_menu, &s_force_respawn_box);
 	Menu_AddItem(&s_gameoptions_menu, &s_allow_exit_box);
-	Menu_AddItem(&s_gameoptions_menu, &s_infinite_Ammo_box);
+	Menu_AddItem(&s_gameoptions_menu, &s_infinite_ammo_box);
 	Menu_AddItem(&s_gameoptions_menu, &s_quad_drop_box);
 	Menu_AddItem(&s_gameoptions_menu, &s_friendlyfire_box);
 	Menu_AddItem(&s_gameoptions_menu, &s_friendlyfire_item_box);
 	Menu_AddItem(&s_gameoptions_menu, &s_individual_fraglimit_box);
+	Menu_AddItem(&s_gameoptions_menu, &s_director_can_pickup_player_items_box);
+	Menu_AddItem(&s_gameoptions_menu, &s_drop_director_items_box);
 	Menu_Center(&s_gameoptions_menu);
 
 	// set the original gameflags statusbar
